Java 11, MapStrup processor